--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.3",
     "react-scripts": "3.4.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.2.4"
   },
   "scripts": {
