--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "bulma": "^0.8.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
